fix : empty value

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <textarea id="txt-input"
             placeholder="Put your message in English here to convert it into Dolan speak"></textarea>
         <button id="btn-translate">Translate</button>
+        <p id="message"></p>
         <div class="div-translated">
             <p>Output will come here 👇</p>
             <div id="output">
